force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Class__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Class__c</fullName>
    <label>Class</label>
    <type>TextArea</type>
</CustomField>