force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Definition_in_Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Definition_in_Test_Provider__c</fullName>
    <inlineHelpText>Link to test definition in test provider</inlineHelpText>
    <label>Link to Test Definition</label>
    <type>Url</type>
</CustomField>