force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Essential__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Essential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essential</label>
    <type>Checkbox</type>
</CustomField>