force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__External_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>