force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Last_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Execution_Status__c</fullName>
    <label>Last Execution Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>