force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Programming_Language__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Programming_Language__c</fullName>
    <label>Programming Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>