force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>