force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Subtype__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Subtype__c</fullName>
    <label>Test Subtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>