force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider__c</fullName>
    <label>Test Provider</label>
    <referenceTo>sf_devops__Test_Provider__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>