force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Test_Provider_Engine__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider_Engine__c</fullName>
    <label>Test Provider Engine</label>
    <length>80</length>
    <type>Text</type>
</CustomField>