force-app/main/default/objects/sf_devops__Test__c/fields/sf_devops__Type__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linting/Scanning</fullName>
            </value>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>Integration Test</fullName>
            </value>
            <value>
                <fullName>End-to-End Test</fullName>
            </value>
            <value>
                <fullName>Profiling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>